[package]
name = "jsonline_gzip_streaming"
version = "0.0.1"
description = ""
authors = ["JP Camara"]
license = ""
repository = ""
edition = "2021"

[dependencies]
futures = "0.3.26"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
async-compression = { version = "0.3.12", features = ["futures-io", "gzip"] }